--- a/QuickFitness/app/src/main/res/layout-land/activity_login.xml
+++ b/QuickFitness/app/src/main/res/layout-land/activity_login.xml
@@ -8,130 +8,9 @@
     android:background="@color/purple_accent"
     tools:context=".LogInActivity">
 
-    <TextView
-        android:id="@+id/quickFitnessTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.188"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginLogo"
-        app:layout_constraintVertical_bias="0.013" />
+    <FrameLayout
+        android:id="@+id/loginFrameContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/loginLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_foreground" />
-
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="312dp"
-        android:layout_marginBottom="29dp"
-        android:text="@string/login_name"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/putUsername"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/putUsername"
-        android:layout_width="236dp"
-        android:layout_height="34dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="28dp"
-        android:background="@color/white"
-        android:hint="@string/insert_username"
-        android:textColorHint="@color/grey"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/login_name"
-        android:textColor="@color/grey"
-        app:layout_constraintBottom_toTopOf="@+id/password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/username" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/putPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="140dp"
-        android:background="@color/white"
-        android:ems="10"
-        android:hint="@string/insert_password"
-        android:inputType="textPersonName"
-        android:text="@string/login_password"
-        android:textColor="@color/grey"
-        android:textColorHint="@color/grey"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/username"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/grey">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="236dp"
-            android:layout_height="34dp"
-            android:ems="10"
-            android:inputType="textPassword" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="@string/login_password"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/putPassword"
-        app:layout_constraintStart_toStartOf="@+id/username" />
-
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="49dp"
-        android:layout_marginBottom="72dp"
-        android:backgroundTint="@color/teal"
-        android:text="@string/login"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/username"
-        app:layout_constraintTop_toTopOf="@+id/putPassword"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/createAccountButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="92dp"
-        android:background="@color/purple"
-        android:text="@string/create_account"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toEndOf="@+id/loginButton"
-        app:layout_constraintTop_toTopOf="@+id/loginButton"
-        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
