--- a/QuickFitness/app/src/main/res/layout-land/fragment_verify_email.xml
+++ b/QuickFitness/app/src/main/res/layout-land/fragment_verify_email.xml
@@ -8,28 +8,32 @@
     android:background="@color/purple_accent"
     tools:context=".VerifyEmailFragment">
 
+
     <ImageView
         android:id="@+id/loginLogo"
         android:layout_width="145dp"
         android:layout_height="127dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="88dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_foreground"
         tools:ignore="ContentDescription" />
 
+
     <TextView
         android:id="@+id/quickFitnessTitle"
         android:layout_width="255dp"
         android:layout_height="60dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginLogo" />
 
@@ -37,21 +41,21 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="80dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/verify_email"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.79"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quickFitnessTitle" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/putCode"
         android:layout_width="224dp"
         android:layout_height="46dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="12dp"
         android:background="@color/white"
         android:ems="10"
         android:gravity="center|center_vertical"
@@ -61,9 +65,9 @@
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.811"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/emailReplaceView" />
 
     <Button
         android:id="@+id/verifyButton"
@@ -72,36 +76,34 @@
         android:text="@string/verify"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.761"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/putCode"
-        app:layout_constraintVertical_bias="0.167" />
-
+        app:layout_constraintVertical_bias="0.18" />
 
     <TextView
         android:id="@+id/emailReplaceView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="140dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/example_email_com"
         android:textColor="@color/teal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.033"
+        app:layout_constraintHorizontal_bias="0.175"
         app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginStart="212dp"
+        android:layout_marginTop="140dp"
         android:text="@string/a_verification_code_was_sent_to"
         android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginLogo" />
+        app:layout_constraintStart_toEndOf="@+id/loginLogo"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/backToLoginButton"
@@ -117,5 +119,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/icon_left_arrow_white" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
